src/mongo/db/query/query_tester/tests/selfTests/negativeTests/compare_tests/partial_run_sentinel.results
// PARTIAL_RUN: Generated with -n or -r. Do not rename this file to .results.
partial_run_sentinel
test
test.coll as fuzzer_coll

0
:results {aggregate: "fuzzer_coll", pipeline: [{$limit:1}], cursor: {}}
[
{"_id":0}
]

1
:results {aggregate: "fuzzer_coll", pipeline: [{$limit:2}], cursor: {}}
[
{"_id":0},
{"_id":1}
]
